styles.css
@page {
  size: 1240px 1754px;
  margin: 0;
}

html,
body {
  width: 1240px;
  height: 1754px;
  margin: 0 auto;
  padding: 0;
  background-color: black;
  font-family: Arial, Helvetica, sans-serif;
}

a {
  text-decoration: none;
  color: white;
}

a:hover {
  text-decoration: underline;
}

#cv {
  margin: auto;
  background-color: #00172b;
  display: flex;
  min-height: 1754px;
  width: 1240px;
  box-sizing: border-box;
  overflow: hidden;
}

#info {
  flex: 1;
  height: 100%;
  color: white;
  display: flex;
  flex-direction: column;
  font-size: 20px;
}

.picture-container {
  display: flex;
  justify-content: center;
  align-items: center;
  height: 300px;
}

.picture {
  width: 200px;
  height: 200px;
  border-radius: 50%;
  overflow: hidden;
}

.picture img {
  width: 200px;
}

#contacts h3,
#languages h3,
#skills h3,
#interests h3 {
  border-bottom: 2px solid white;
  padding-bottom: 5px;
}

#contacts,
#languages,
#skills,
#interests {
  padding-left: 50px;
  padding-right: 50px;
}

.contact,
.language {
  display: flex;
  align-items: center;
  gap: 10px;
  padding-bottom: 10px;
}

.interest-list {
  display: flex;
  flex-wrap: wrap;
  gap: 12px 20px;
}

.interest,
.skill {
  display: flex;
  align-items: center;
  gap: 10px;
}

img.icon {
  width: 20px;
}

#details {
  background-color: white;
  flex: 2;
  padding: 50px 70px 50px 50px;
  box-sizing: border-box;
  display: flex;
  flex-direction: column;
  gap: 29px;
  font-size: 20px;
}

#name-and-position {
  font-weight: bold;
}

.name {
  font-size: 60px;
}

.position {
  font-size: 30px;
}

#about {
  font-size: 20px;
}

#experiences h3,
#education h3,
#references h3,
#recent-projects h3 {
  border-bottom: 2px solid #00172b;
  padding-bottom: 5px;
  margin: 0;
}

.experience {
  padding-top: 15px;
}

a.website {
  color: black;
  font-weight: bold;
}

.description ul {
  margin: 10px;
}

.title-row {
  display: flex;
  align-items: center;
  justify-content: space-between;
}

img.website {
  color: black;
  border-radius: 50%;
  width: 25px;
}

.job-title,
.school-name {
  font-weight: bold;
}

.job-time,
.school-time {
  padding-top: 4px;
  color: #bbbbbb;
  font-weight: bold;
  font-size: 18px;
}

.description {
  padding-left: 20px;
  line-height: 25px;
}

.technologies h5 {
  margin: 5px 0 0 0;
}

.technology-list {
  margin-top: 5px;
  display: flex;
  flex-wrap: wrap;
  gap: 5px 10px;
}

.technology {
  background-color: #00172b;
  color: white;
  border-radius: 8px;
  padding: 4px 10px;
  font-size: 14px;
  font-weight: bold;
}

.extra-info h5 {
  margin: 0;
}

.school {
  padding-top: 20px;
}

.icon {
  background-color: white;
  color: black;
  border-radius: 50%;
  padding: 3px;
}

.skill-list {
  display: flex;
  flex-wrap: wrap;
  gap: 7px;
}

.skill {
  border-radius: 4px;
  border: 1px solid #ffde00;
  padding: 1px;
  display: flex;
  flex-direction: column;
  justify-content: center;
  font-size: 13px;
  font-weight: bold;
  width: 80px;
}

.proficient {
  border: 1px solid #4bb543;
}

.skill-icon {
  border-radius: 25%;
  padding: 3px;
}

img.skill-icon {
  width: 40px;
}

.explanations {
  padding-top: 20px;
}

.explanation {
  display: flex;
  align-items: center;
  gap: 10px;
}

.color.green {
  background-color: #4bb543;
  width: 30px;
  height: 5px;
}

.color.yellow {
  background-color: #ffde00;
  width: 30px;
  height: 5px;
}

.reference {
  padding-top: 20px;
  font-weight: bold;
}

.projects {
  padding-top: 20px;
  margin: 0;
  display: flex;
  justify-content: space-around;
}

.project {
  color: black;
  font-weight: bold;
  display: flex;
  flex-direction: column;
  align-items: center;
}

.project img {
  width: 80px;
}

